# junction2022

./: Dockerfile  README.md  README.rst  app.py  categories.csv  pyproject.toml  service-account.json
junction/: category.py  text_sentiment.py
