[tool.poetry]
name = "junction"
version = "0.1.0"
description = "Junction2022"
authors = ["Mikhail Tokarev <mikhail.tokarev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-language = "^2.6.1"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
